# kaaj-lender-matching

./: .gitignore  DECISIONS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  seed.py  time.py
backend/app/api/: applications.py  lenders.py
backend/app/matching/: __init__.py  engine.py  features.py  rules.py  runner.py
backend/app/models/: __init__.py  application.py  lender.py  result.py
backend/app/schemas/: __init__.py  application.py  lender.py  result.py
backend/lenders/: advantage_plus.yaml  apex.yaml  citizens.yaml  falcon.yaml  stearns.yaml
backend/scripts/: extract_draft.py
backend/tests/: conftest.py  test_engine.py  test_features.py  test_rules.py  test_runner.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/pages/: ApplicationDetail.tsx  ApplicationsList.tsx  LenderDetail.tsx  LendersList.tsx  NewApplication.tsx  NewLender.tsx
